--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "robotframework-tabular-report"
 version = "0.1.0"
-description = "Add your description here"
+description = "Robot Framework prerebotmodifiers for tabular test results"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = ['robotframework', 'xlsxwriter']
